jekyll container for displaying notes. Google clould platform notes

--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,8 @@ github_username:  devasura
 # Build settings
 markdown: kramdown
 theme: minima
+
+#collections
+collections:
+  notes:
+    output: true
