--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ email: devasura@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Coding the world aroud bit by bit
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+#url: "http://127.0.0.1:4000" # the base hostname & protocol for your site
+url: "http://clonecommitmerge.xyz" # the base hostname & protocol for your site
 #url: "https://devasura.github.io" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username:  devasura
